updated project two

--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
           <article class="project-card tilt-card reveal" data-tilt>
             <div class="project-glow"></div>
             <div class="project-num">02</div>
-            <h3>Project Two</h3>
-            <p>Data-driven dashboard with interactive charts, filters, and accessible keyboard navigation.</p>
-            <div class="project-tags"><span>React</span><span>D3.js</span><span>CSS</span></div>
+            <h3>FORMA Interior Design Webpage</h3>
+            <p>Interactive webpage for an interior design firm, featuring dynamic visualizations and a modern aesthetic.</p>
+            <div class="project-tags"><span>HTML</span><span>CSS</span><span>JavaScript</span></div>
             <div class="project-links">
-              <a href="#" class="project-link">Live &#8599;</a>
-              <a href="#" class="project-link">Code &#8599;</a>
+              <a href="https://samktran.github.io/forma.github.io/" class="project-link">Live &#8599;</a>
+              <a href="https://github.com/samktran/forma.github.io" class="project-link">Code &#8599;</a>
             </div>
           </article>
 
