--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="project-glow"></div>
             <div class="project-num">02</div>
             <h3>FORMA Interior Design Website</h3>
-            <p>Interactive webpage for an interior design firm, featuring dynamic visualizations and a modern aesthetic.</p>
+            <p>Highly aesthetic webpage for an interior design firm, featuring dynamic visualizations and a modern aesthetic.</p>
             <div class="project-tags"><span>HTML</span><span>CSS</span><span>JavaScript</span></div>
             <div class="project-links">
               <a href="https://samktran.github.io/forma.github.io/" class="project-link">Live &#8599;</a>
@@ -142,7 +142,7 @@
             <div class="project-glow"></div>
             <div class="project-num">03</div>
             <h3>SolarNova Solar Panel Website</h3>
-            <p>Website for a solar panel company, providing information on products, services, and installation options.</p>
+            <p>Bold and modern website for a solar panel company, providing information on products, services, and installation options.</p>
             <div class="project-tags"><span>C#</span><span>.NET</span></div>
             <div class="project-links">
               <a href="https://samktran.github.io/solarnova.github.io/" class="project-link">Live &#8599;</a>
@@ -153,12 +153,12 @@
           <article class="project-card tilt-card reveal" data-tilt>
             <div class="project-glow"></div>
             <div class="project-num">04</div>
-            <h3>Project Four</h3>
-            <p>E-commerce storefront with real-time cart, smooth transitions, and optimised core web vitals.</p>
+            <h3>Pets & Strolls Dog Walking Website</h3>
+            <p>Interactive website for a dog walking service, featuring booking options, service details, and client testimonials.</p>
             <div class="project-tags"><span>Next.js</span><span>Stripe</span><span>Tailwind</span></div>
             <div class="project-links">
-              <a href="#" class="project-link">Live &#8599;</a>
-              <a href="#" class="project-link">Code &#8599;</a>
+              <a href="https://samktran.github.io/petsandstrolls.github.io/" class="project-link">Live &#8599;</a>
+              <a href="https://github.com/samktran/petsandstrolls.github.io" class="project-link">Code &#8599;</a>
             </div>
           </article>
 
