--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="project-num">03</div>
             <h3>SolarNova Solar Panel Website</h3>
             <p>Bold and modern website for a solar panel company, providing information on products, services, and installation options.</p>
-            <div class="project-tags"><span>C#</span><span>.NET</span></div>
+            <div class="project-tags"><span>HTML</span><span>CSS</span><span>JavaScript</span></div>
             <div class="project-links">
               <a href="https://samktran.github.io/solarnova.github.io/" class="project-link">Live &#8599;</a>
               <a href="https://github.com/samktran/solarnova.github.io" class="project-link">Code &#8599;</a>
@@ -155,7 +155,7 @@
             <div class="project-num">04</div>
             <h3>Pets & Strolls Dog Walking Website</h3>
             <p>Interactive website for a dog walking service, featuring booking options, service details, and client testimonials.</p>
-            <div class="project-tags"><span>Next.js</span><span>Stripe</span><span>Tailwind</span></div>
+            <div class="project-tags"><span>HTML</span><span>CSS</span><span>JavaScript</span></div>
             <div class="project-links">
               <a href="https://samktran.github.io/petsandstrolls.github.io/" class="project-link">Live &#8599;</a>
               <a href="https://github.com/samktran/petsandstrolls.github.io" class="project-link">Code &#8599;</a>
