--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css?v=20260218" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon-code.svg" type="image/svg+xml">
 </head>
 <body>
 
@@ -17,7 +18,14 @@
   <!-- NAV -->
   <nav class="nav" id="mainNav">
     <div class="container nav-inner">
-      <a class="brand" href="#"><span class="brand-dot"></span>Sam Tran</a>
+      <a class="brand" href="#">
+        <span class="brand-icon" aria-hidden="true">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" role="img" aria-hidden="true">
+            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="JetBrains Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, monospace" font-size="12" font-weight="700" fill="currentColor">&lt;/&gt;</text>
+          </svg>
+        </span>
+        Sam Tran
+      </a>
       <ul class="nav-links">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Work</a></li>
