fix: use local project screenshots and update brand/theme-toggle styles

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="proj-visual">
               <div class="proj-img-wrap">
-                <img src="https://api.microlink.io/?url=https://samktran.github.io/rosehairstudio.github.io/&screenshot=true&meta=false&embed=screenshot.url" alt="Rosé Hair Studio preview" loading="lazy" />
+                <img src="images/proj-rose.png" alt="Rosé Hair Studio preview" loading="lazy" />
               </div>
             </div>
           </article>
@@ -152,7 +152,7 @@
             </div>
             <div class="proj-visual">
               <div class="proj-img-wrap">
-                <img src="https://api.microlink.io/?url=https://forma.static.domains&screenshot=true&meta=false&embed=screenshot.url&screenshot.delay=4" alt="FORMA preview" loading="lazy" />
+                <img src="images/proj-forma.png" alt="FORMA preview" loading="lazy" />
               </div>
             </div>
           </article>
@@ -168,7 +168,7 @@
             </div>
             <div class="proj-visual">
               <div class="proj-img-wrap">
-                <img src="https://api.microlink.io/?url=https://solarnova.static.domains&screenshot=true&meta=false&embed=screenshot.url" alt="SolarNova preview" loading="lazy" />
+                <img src="images/proj-solarnova.png" alt="SolarNova preview" loading="lazy" />
               </div>
             </div>
           </article>
@@ -184,7 +184,7 @@
             </div>
             <div class="proj-visual">
               <div class="proj-img-wrap">
-                <img src="https://api.microlink.io/?url=https://samktran.github.io/pawsandstrolls.github.io/&screenshot=true&meta=false&embed=screenshot.url" alt="Paws & Strolls preview" loading="lazy" />
+                <img src="images/proj-paws.png" alt="Paws &amp; Strolls preview" loading="lazy" />
               </div>
             </div>
           </article>
