change email config

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="contact-socials">
               <a href="https://github.com/samktran" class="social-link mag-btn">GitHub &#8599;</a>
               <a href="https://www.linkedin.com/in/samktran/" class="social-link mag-btn">LinkedIn &#8599;</a>
-              <a href="https://www.instagram.com/samktran/" class="social-link mag-btn">Instagram &#8599;</a>
+              <a href="https://www.instagram.com/codesamtran/" class="social-link mag-btn">Instagram &#8599;</a>
             </div>
           </div>
           <form id="contactForm" class="contact-form reveal" novalidate>
