redesign with new brand logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sam — Portfolio</title>
+  <title>Code By Samu — Portfolio</title>
   <link rel="stylesheet" href="style.css?v=20260218" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
@@ -19,12 +19,8 @@
   <nav class="nav" id="mainNav">
     <div class="container nav-inner">
       <a class="brand" href="#">
-        <span class="brand-icon" aria-hidden="true">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" role="img" aria-hidden="true">
-            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="JetBrains Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, monospace" font-size="12" font-weight="700" fill="currentColor">&lt;/&gt;</text>
-          </svg>
-        </span>
-        Sam Tran
+        <img src="images/codebysamu-logo.png" alt="Code by Samu" class="brand-logo" />
+        Code By Samu
       </a>
       <ul class="nav-links">
         <li><a href="#about" class="nav-link">About</a></li>
@@ -63,7 +59,7 @@
     <div class="container hero-inner">
       <div class="hero-label reveal">&#10022; Available for freelance</div>
       <h1 class="hero-title reveal">
-        <span class="hero-greeting">Hello, I'm Sam &mdash;</span><br>
+        <span class="hero-greeting">Hello, I'm Samu &mdash;</span><br>
         <span class="hero-typed-wrapper">
           <span id="heroTyped"></span><span class="typed-cursor">|</span>
         </span>
@@ -361,7 +357,7 @@
             <div class="contact-socials">
               <a href="https://github.com/codebysamu" class="social-link mag-btn">GitHub &#8599;</a>
               <a href="https://www.linkedin.com/in/samktran/" class="social-link mag-btn">LinkedIn &#8599;</a>
-              <a href="https://www.instagram.com/codesamtran/" class="social-link mag-btn">Instagram &#8599;</a>
+              <a href="https://www.instagram.com/codebysamu/" class="social-link mag-btn">Instagram &#8599;</a>
             </div>
           </div>
           <form id="contactForm" class="contact-form reveal" novalidate>
@@ -395,7 +391,10 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; 2026 Sam Tran &mdash; Designed &amp; built with care</p>
+      <div class="footer-brand">
+        <img src="images/codebysamu-logo.png" alt="Code by Samu" class="footer-brand-logo" />
+        <p>&copy; 2026 Code By Samu &mdash; Designed &amp; built with care</p>
+      </div>
       <a href="#hero" class="footer-top">Back to top &#8593;</a>
     </div>
   </footer>
