changed favicon and made logo bigger

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css?v=20260218" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="images/favicon-code.svg" type="image/svg+xml">
+  <link rel="icon" href="images/codebysamu-favicon.png" type="image/png">
 </head>
 <body>
 
